--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "ejs": "~2.3.1",
 
 
-    
+
     "express": "~4.12.2",
     "readline": "0.0.7",
-    "serve-favicon": "~2.2.0",
+    AΩserve-favicon": "~2.2.0",
+    "sockjs": "~0.3.15",
+    "chalk": "~1.0.0",
+    "underscore.string": "~3.0.3"
+  }
+  "dependencies": {
+    "debug": "~2.1.1",
+    "ejs": "~2.3.1",
+
+
+
+    "express": "~4.12.2",
+    "readline": "0.0.7",
+    AΩserve-favicon": "~2.2.0",
     "sockjs": "~0.3.15",
     "chalk": "~1.0.0",
     "underscore.string": "~3.0.3"
